--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,7 @@ body {
   min-width: 1100px;
   margin: 0;
   font-family: Raleway, sans-serif;
+  background-color: #fff;
 }
 
 h1,
@@ -27,8 +28,13 @@ blockquote {
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 img {
   width: 100%;
+}
+
+footer {
+  width: 1440px;
 }
