--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,296 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: 450px auto 450px;
+  margin: 92px 49px 92px 51px;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.content-section {
+  box-sizing: border-box;
+  width: 1440px;
+  margin: auto;
+  background-color: rgb(226, 198, 172);
+}
+
+.header_menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header_links-list {
+  display: flex;
+  gap: 25px;
+  list-style: circle;
+  grid-column: 1;
+}
+
+.header_links-list .header_links-list-item:first-child {
+  list-style: none;
+}
+
+.header_links-list .header_links-list-item:not(:first-child) {
+  margin-left: 10px;
+}
+
+.header_logo,
+.header_logo-image {
+  display: block;
+  width: 148px;
+  height: 105px;
+  grid-column: 2;
+  justify-self: center;
+}
+
+.address {
+  display: flex;
+  flex-direction: column;
+  width: 240px;
+  line-height: 24.3px;
+  grid-column: 3;
+  justify-self: end;
+}
+
+.address_link {
+  border-bottom: 1px solid;
+  width: 135px;
+}
+
+.cover {
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% auto;
+  height: 757px;
+  display: block;
+}
+
+.overlay_cover {
+  display: grid;
+  grid-template-rows: 115px auto 102px;
+  grid-template-columns: 372px auto;
+  padding: 50px;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+  height: 100%;
+}
+
+.cover_title {
+  width: 100%;
+  color: #fff;
+  font-size: 100px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 115%;
+  grid-row: 2;
+  grid-column: 1 / 3;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 30px;
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.margin-right_corrected {
+  margin-right: -30px;
+}
+
+.cover_description {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  grid-row: 3;
+  grid-column: 2/ 3;
+  padding-top: 50px;
+}
+
+.cover_description-text {
+  display: flex;
+  justify-content: space-between;
+  width: 633px;
+  color: #fff;
+  font-size: 22px;
+  font-weight: 400;
+  text-transform: uppercase;
+  text-align: justify;
+}
+
+.bet-button {
+  width: 257px;
+  height: 52px;
+  flex-shrink: 0;
+  border: 1px solid #fff;
+  background-color: transparent;
+}
+
+.bet-button_text {
+  color: #fff;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.lots {
+  padding: 180px 50px 181px;
+}
+
+.lots_heading {
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding-bottom: 27px;
+  padding-left: 40px;
+}
+
+.lots_card-list {
+  display: flex;
+  gap: 25px;
+  list-style: none;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 50px 40px;
+  width: 430px;
+  height: 450px;
+  color: #fff;
+  font-size: 20px;
+  line-height: 120%;
+}
+
+.card_type {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% auto;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card_title {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+  z-index: 1;
+}
+
+.lots_look-more-link {
+  font-size: 20px;
+  padding-left: 40px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 430px 25px auto;
+  grid-template-rows: 240px auto;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-bottom: 180px;
+}
+
+.about_logo {
+  background-color: #000;
+  border-radius: 50%;
+  width: 240px;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  justify-self: center;
+}
+
+.about_logo-image {
+  padding: 63px 46px;
+}
+
+.about_title {
+  font-size: 40px;
+  text-transform: uppercase;
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+  align-self: center;
+}
+
+.about_text {
+  font-size: 20px;
+  grid-column: 3 / 4;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  padding: 0 50px;
+  font-size: 18px;
+}
+
+.footer_menu-list {
+  display: flex;
+  list-style: none;
+  flex-direction: column;
+  text-align: center;
+}
+
+.footer_social-list {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  width: 240px;
+  height: 48px;
+}
+
+.footer_social-icon {
+  background-repeat: no-repeat;
+  height: 48px;
+  width: 48px;
+  display: block;
+}
+
+.footer_social-icon-youtube {
+  background-image: url(../images/yt.svg);
+}
+
+.footer_social-icon-vk {
+  background-image: url(../images/vk.svg);
+}
+
+.footer_social-icon-pinterest {
+  background-image: url(../images/pinterest.svg);
+}
