--- a/styles/style.css
+++ b/styles/style.css
@@ -6,12 +6,6 @@
   font-weight: 400;
 }
 
-.content-section {
-  box-sizing: border-box;
-  width: 1440px;
-  margin: auto;
-}
-
 .header_menu {
   display: flex;
   justify-content: space-between;
@@ -24,13 +18,17 @@
   list-style: circle;
   grid-column: 1;
 }
+/* TODO сделать подчеркивание на втором и первом элементе */
+.header_links-list .header_links-list-item a {
+  border-bottom: 1px solid;
+}
 
 .header_links-list .header_links-list-item:first-child {
   list-style: none;
 }
 
 .header_links-list .header_links-list-item:not(:first-child) {
-  margin-left: 10px;
+  margin-left: 8px;
 }
 
 .header_logo,
@@ -248,6 +246,9 @@
 }
 
 .about_text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
   font-size: 20px;
   grid-column: 3 / 4;
 }
