--- a/styles/global.css
+++ b/styles/global.css
@@ -5,10 +5,10 @@
 }
 
 body {
-  min-width: 1100px;
-  margin: 0;
   font-family: Raleway, sans-serif;
   background-color: #fff;
+  width: 1440px;
+  margin: auto;
 }
 
 h1,
@@ -35,6 +35,3 @@ img {
   width: 100%;
 }
 
-footer {
-  width: 1440px;
-}
