--- a/styles/global.css
+++ b/styles/global.css
@@ -6,9 +6,7 @@
 
 body {
   font-family: Raleway, sans-serif;
-  background-color: #fff;
-  width: 1440px;
-  height: 2844px;
+  min-width: 1100px;
   margin: auto;
 }
 
@@ -29,10 +27,10 @@ blockquote {
 
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: underline;
+  text-underline-offset: 4px;
 }
 
 img {
   width: 100%;
 }
-
