--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@
 }
 
 .header_links-list .header_links-list-item:not(:first-child) {
-  margin-left: 8px;
+  margin-left: 6px;
 }
 
 .header_logo,
@@ -44,6 +44,7 @@ address {
   grid-column: 3;
   justify-self: end;
   font-style: normal;
+  justify-content: center;
 }
 
 .cover {
@@ -113,7 +114,7 @@ address {
   align-items: center;
   justify-content: end;
   grid-row: 3;
-  padding-top: 50px;
+  padding-top: 48px;
 }
 
 .cover_description-text {
@@ -144,7 +145,7 @@ address {
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
-  padding-bottom: 27px;
+  padding-bottom: 25px;
   padding-left: 40px;
 }
 
@@ -152,7 +153,7 @@ address {
   display: flex;
   gap: 25px;
   list-style: none;
-  margin-bottom: 30px;
+  margin-bottom: 32px;
   justify-content: space-between;
   overflow-x: hidden;
 }
@@ -161,7 +162,7 @@ address {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 50px 40px;
+  padding: 50px 39px;
   width: 430px;
   min-height: 450px;
   color: #fff;
