--- a/styles/style.css
+++ b/styles/style.css
@@ -208,7 +208,7 @@ address {
 
 .about {
   display: grid;
-  grid-template-columns: 430px 25px auto;
+  grid-template-columns: 430px 25px 885px;
   grid-template-rows: 240px auto;
   padding-left: 50px;
   padding-right: 50px;
@@ -243,7 +243,6 @@ address {
   font-size: 20px;
   grid-column: 3 / 4;
   padding-top: 7px;
-  padding-right: 1px;
 }
 
 .footer {
