--- a/styles/style.css
+++ b/styles/style.css
@@ -74,7 +74,6 @@ address {
   text-transform: uppercase;
   line-height: 115%;
   grid-row: 2;
-
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -92,17 +91,16 @@ address {
 
 .aligned-text {
   display: block;
-  height: 105px;
+  line-height: 105px;
 }
 
 .aligned-text_center {
   text-align: center;
-  height: 100px;
 }
 
 .aligned-text_right {
   text-align: right;
-  height: 100px;
+  line-height: 85px;
 }
 
 .margin-right_corrected {
@@ -151,11 +149,11 @@ address {
 
 .lots_card-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 25px;
   list-style: none;
   margin-bottom: 32px;
   justify-content: space-between;
-  overflow-x: hidden;
 }
 
 .card {
@@ -208,7 +206,7 @@ address {
 
 .about {
   display: grid;
-  grid-template-columns: 430px 25px 885px;
+  grid-template-columns: 430px 25px auto;
   grid-template-rows: 240px auto;
   padding-left: 50px;
   padding-right: 50px;
